apps/frontend-ui/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: frontend-ui
  namespace: frontend-ui

spec:
  replicas: 2

  selector:
    matchLabels:
      app: frontend-ui

  template:
    metadata:
      labels:
        app: frontend-ui

    spec:
      containers:
        - name: frontend-ui
          image: 719572784863.dkr.ecr.us-east-1.amazonaws.com/frontend-ui:216abc3f9471fa6383bafe9fbc6fd32afc9a35c8
          imagePullPolicy: Always

          ports:
            - containerPort: 80

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "300m"
              memory: "256Mi"

          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5

          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 20
            periodSeconds: 20
            timeoutSeconds: 5
