apps/frontend-ui/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: frontend-ui

spec:

  selector:
    app: frontend-ui

  ports:
  - port: 80
    targetPort: 80
