apps/frontend-ui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: frontend-ui

  annotations:

    alb.ingress.kubernetes.io/scheme: internet-facing

spec:

  ingressClassName: alb

  rules:

  - host: ops.rk-labs.xyz

    http:

      paths:

      - path: /

        pathType: Prefix

        backend:

          service:
            name: frontend-ui

            port:
              number: 80
